--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <div class="header">
+            <div class="home">1</div>
+            <div class="contact">2</div>
+            <div class="about">3</div>
+            <div class="music">4</div>
+        </div>
+        <div class="main"></div>
+        <div class="footer">this is footer</div>
+        </div>
+    </div>
+
+    <script src="js/main.js"></script>
 </body>
 </html>
