--- a/index.html
+++ b/index.html
@@ -9,12 +9,17 @@
 <body>
     <div class="container">
         <div class="header">
-            <div class="home">1</div>
-            <div class="contact">2</div>
-            <div class="about">3</div>
-            <div class="music">4</div>
+            <div class="logo">Logo</div>
+            <div class="home"><a href="index.html">Home</a></div>
+            <div class="contact"><a href="contact.html">contact</a></div>
+            <div class="about"><a href="about-us.html">About us</a></div>
+            <div class="music"><a href="music.html">Music</a></div>
+            <div class="anime">Anime</div>
         </div>
-        <div class="main"></div>
+        <div class="main">
+            <div class="dao">dit is van dao </div>
+            <div class="mo">dit is van mo </div>
+        </div>
         <div class="footer">this is footer</div>
         </div>
     </div>
