back ground pic added

--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
             <div class="anime">Anime</div>
         </div>
         <div class="main">
-            <div class="dao">dit is van dao </div>
+            <div class="dao">
+                <img src="assets/music.jpg" alt="">
+                
+            </div>
             <div class="mo">dit is van mo </div>
         </div>
         <div class="footer">this is footer</div>
