--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         </div>
         <div class="main">
             <div class="dao">
-                <img src="assets/music.jpg" alt="">
-                
+                <p>hier stat text</p>
+                <button class="dao-button"><a href="music.html"></a></button>
             </div>
             <div class="mo">dit is van mo </div>
         </div>
