--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         </div>
         <div class="main">
             <div class="dao">
-                <p>hier stat text</p>
-                <button class="dao-button"><a href="music.html"></a></button>
+                <p></p>
+                <button class="dao-button"><a href="music.html">explore</a></button>
             </div>
             <div class="mo">dit is van mo </div>
         </div>
