--- a/about-us.html
+++ b/about-us.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style2.css">
 </head>
 <body>
     <div class="container">
@@ -23,7 +23,10 @@
         <div class="footer">this is footer</div>
         </div>
     </div>
-
+    <div class="aboutus"> 
+<div class="box div1">div1</div>
+<div class="box div2">div2</div>
+<div class="box div3">Lorem ipsum dolor sit amet.</div>
     <script src="js/main.js"></script>
 </body>
 </html>
