--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
     <div class="container">
         <div class="header">
             <div class="logo">Logo</div>
-            <div class="home"><a href="index.html">Home</a></div>
-            <div class="contact"><a href="contact.html">contact</a></div>
-            <div class="about"><a href="about-us.html">About us</a></div>
-            <div class="music"><a href="music.html">Music</a></div>
-            <div class="anime"><a href="anime.html">anime</a></div>
+            <div class="nav"><a href="index.html">Home</a></div>
+            <div class="nav"><a href="contact.html">contact</a></div>
+            <div class="nav"><a href="about-us.html">About us</a></div>
+            <div class="nav"><a href="music.html">Music</a></div>
+            <div class="nav"><a href="anime.html">anime</a></div>
         </div>
         <div class="main">
             <div class="dao">
-                <p>hier staat text </p>
+                <div class="text"> Join us on a journey to explore the history of 3 amazing genres of musical </div>
                 <button class="dao-button"><a href="music.html">explore</a></button>
 
             </div>
