music page (bezig)

--- a/music.html
+++ b/music.html
@@ -4,24 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/music.css">
 </head>
 <body>
     <div class="container">
-        <div class="header">
+       <header>
             <div class="logo">Logo</div>
             <div class="home"><a href="index.html">Home</a></div>
             <div class="contact"><a href="contact.html">contact</a></div>
             <div class="about"><a href="about-us.html">About us</a></div>
             <div class="music"><a href="music.html">Music</a></div>
             <div class="anime">Anime</div>
-            
-        </div>
-        <div class="main">
-
-        </div>
-        <div class="footer">this is footer</div>
-        </div>
+        </header>    
+        <main>
+            <div class="welcom-text"></div>
+            <div class="genre-container">
+                <div class="pop"></div>
+                <div class="funk"></div>
+                <div class="lofi"></div>
+            </div>
+        </main>
+        <footer>this is footer</footer>
     </div>
 
     <script src="js/main.js"></script>
