--- a/about-us.html
+++ b/about-us.html
@@ -19,14 +19,16 @@
             
         </div>
         <div class="main">
+            <div class="boxdiv3">Information About Us</div>
+            <div class="boxdiv1">I am Mohamed</div>
+        <div class="boxdiv2">I am Dao</div>
+        
+
+
         </div>
-        <div class="footer">this is footer</div>
+        <div class="footer">Footer</div>
         </div>
     </div>
-    <div class="aboutus"> 
-<div class="box div1">div1</div>
-<div class="box div2">div2</div>
-<div class="box div3">Lorem ipsum dolor sit amet.</div>
     <script src="js/main.js"></script>
 </body>
 </html>
