new font voor welcome-text

--- a/music.html
+++ b/music.html
@@ -1,27 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="/css/music.css">
 </head>
+
 <body>
     <div class="container">
-       <header>
+        <header>
             <div class="logo">Logo</div>
             <div class="home"><a href="index.html">Home</a></div>
             <div class="contact"><a href="contact.html">contact</a></div>
             <div class="about"><a href="about-us.html">About us</a></div>
             <div class="music"><a href="music.html">Music</a></div>
             <div class="anime">Anime</div>
-        </header>    
+        </header>
         <main>
-            <div class="welcom-text"></div>
+            <div class="welcome-text">Explore three of the most popular genre of music with us</div>
             <div class="genre-container">
-                <div class="pop"></div>
-                <div class="funk"></div>
-                <div class="lofi"></div>
+                <div class="genre">POP</div>
+                <div class="genre">LOFI</div>
+                <div class="genre">FUNK</div>
             </div>
         </main>
         <footer>this is footer</footer>
@@ -29,4 +31,5 @@
 
     <script src="js/main.js"></script>
 </body>
+
 </html>
