--- a/anime.html
+++ b/anime.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Greatest Anime series</title>
+    <link rel="stylesheet" href="/css/anime.css">
 </head>
 <body>
-    
+ <div class="cart-container"></div>
+ <script src="/js/anime.js"></script>   
 </body>
 </html>
