--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <div class="header">
             <div class="logo">Logo</div>
             <div class="nav"><a href="index.html">Home</a></div>
-            <div class="nav"><a href="contact.html">contact</a></div>
+            <div class="nav"><a href="contact.html">Contact</a></div>
             <div class="nav"><a href="about-us.html">About us</a></div>
             <div class="nav"><a href="music.html">Music</a></div>
-            <div class="nav"><a href="anime.html">anime</a></div>
+            <div class="nav"><a href="anime.html">Anime</a></div>
         </div>
         <div class="main">
             <div class="dao">
@@ -25,7 +25,7 @@
 
             </div>
             <div class="mo">
-                <p> hier staat text </p>
+                <p> Find out about the Most popular Anime's of all time. </p>
                 <button class="mo-button"><a href="anime.html">explore</a></button>
             </div>
         </div>
