--- a/music.html
+++ b/music.html
@@ -13,7 +13,7 @@
         <header>
             <div class="logo">Logo</div>
             <div class="home"><a href="index.html">Home</a></div>
-            <div class="contact"><a href="contact.html">contact</a></div>
+            <div class="contact"><a href="contact.html">Contact</a></div>
             <div class="about"><a href="about-us.html">About us</a></div>
             <div class="music"><a href="music.html">Music</a></div>
             <div class="anime">Anime</div>
