--- a/anime.html
+++ b/anime.html
@@ -1,13 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Greatest Anime series</title>
     <link rel="stylesheet" href="/css/anime.css">
 </head>
+
 <body>
- <div class="cart-container"></div>
- <script src="/js/anime.js"></script>   
+    <div class="container">
+        <header>
+            <div class="logo">Logo</div>
+            <div class="home"><a href="index.html">Home</a></div>
+            <div class="contact"><a href="contact.html">Contact</a></div>
+            <div class="about"><a href="about-us.html">About us</a></div>
+            <div class="music"><a href="music.html">Music</a></div>
+            <div class="anime.html">Anime</div>
+        </header>
+    <div class="animeContainer"></div>
+
+    <script src="/js/anime.js"></script>
 </body>
+
 </html>
