--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
             <div class="contact"><a href="contact.html">Contact</a></div>
             <div class="about"><a href="about-us.html">About us</a></div>
             <div class="music"><a href="music.html">Music</a></div>
-            <div class="anime">Anime</div>
+            <div class="anime-html">Anime</div>
             
         </div>
         <div class="main">
