--- a/anime.html
+++ b/anime.html
@@ -10,16 +10,17 @@
 
 <body>
     <div class="container">
-        <header>
+        <div class="header">
             <div class="logo">Logo</div>
-            <div class="home"><a href="index.html">Home</a></div>
-            <div class="contact"><a href="contact.html">Contact</a></div>
-            <div class="about"><a href="about-us.html">About us</a></div>
-            <div class="music"><a href="music.html">Music</a></div>
-            <div class="anime.html">Anime</div>
-        </header>
+            <div class="nav"><a href="index.html">Home</a></div>
+            <div class="nav"><a href="contact.html">Contact</a></div>
+            <div class="nav"><a href="about-us.html">About us</a></div>
+            <div class="nav"><a href="music.html">Music</a></div>
+            <div class="nav"><a href="anime.html">Anime</a></div>
+        </div>
+    <main>    
     <div class="animeContainer"></div>
-
+    </main>
     <script src="/js/anime.js"></script>
 </body>
 
