--- a/anime.html
+++ b/anime.html
@@ -10,17 +10,24 @@
 
 <body>
     <div class="container">
-        <div class="header">
+        <header>
             <div class="logo">Logo</div>
-            <div class="nav"><a href="index.html">Home</a></div>
-            <div class="nav"><a href="contact.html">Contact</a></div>
-            <div class="nav"><a href="about-us.html">About us</a></div>
-            <div class="nav"><a href="music.html">Music</a></div>
-            <div class="nav"><a href="anime.html">Anime</a></div>
-        </div>
-    <main>    
-    <div class="animeContainer"></div>
-    </main>
+            <div class="home"><a href="index.html">Home</a></div>
+            <div class="contact"><a href="contact.html">Contact</a></div>
+            <div class="about"><a href="about-us.html">About us</a></div>
+            <div class="music"><a href="music.html">Music</a></div>
+            <div class="anime"><a href="anime.html">Anime</a></div>
+        </header>
+        <main>
+            <div class="animeContainer">
+                <div class="dragonball">Dragon Ball</div>
+                    <div class="onepiece">One Piece</div>
+                        <div class="naruto">Naruto</div>
+                        </div>
+                    </div>
+        </main>
+        <footer>this is footer</footer>
+    </div>
     <script src="/js/anime.js"></script>
 </body>
 
