--- a/music.html
+++ b/music.html
@@ -16,7 +16,7 @@
             <div class="contact"><a href="contact.html">Contact</a></div>
             <div class="about"><a href="about-us.html">About us</a></div>
             <div class="music"><a href="music.html">Music</a></div>
-            <div class="anime.html">Anime</div>
+            <div class="anime"><a href="anime.html">Anime</a></div>
         </header>
         <main>
             <div class="welcome-text">Explore three of the most popular genre of music with us</div>
