--- a/anime.html
+++ b/anime.html
@@ -19,16 +19,14 @@
             <div class="anime"><a href="anime.html">Anime</a></div>
         </header>
         <main>
-            <div class="animeContainer">
-                <div class="dragonball">Dragon Ball</div>
-                    <div class="onepiece">One Piece</div>
-                        <div class="naruto">Naruto</div>
-                        </div>
-                    </div>
-        </main>
-        <footer>this is footer</footer>
+            <div class="animeContainer"> </div>
     </div>
-    <script src="/js/anime.js"></script>
+    </main>
+    <footer>this is footer</footer>
+    </div>
+    <script src="/js/anime-db.js"></script>
+    <script src="/js/anime-naruto.js"></script>
+    <script src="/js/anime-op.js"></script>
 </body>
 
 </html>
