Anime Hompage maken

--- a/Anime/animeNaruto.html
+++ b/Anime/animeNaruto.html
@@ -16,17 +16,16 @@
             <div class="contact"><a href="contact.html">Contact</a></div>
             <div class="about"><a href="about-us.html">About us</a></div>
             <div class="music"><a href="music.html">Music</a></div>
-            <div class="anime"><a href="anime.html">Anime</a></div>
+            <div class="anime"><a href="/Anime/anime.html">Anime</a></div>
         </header>
         <main>
-            <div class="animeContainer"> </div>
+            <div class="animeNarutoContainer"> </div>
     </div>
     </main>
     <footer>this is footer</footer>
     </div>
-    <script src="/js/anime-db.js"></script>
     <script src="/js/anime-naruto.js"></script>
-    <script src="/js/anime-op.js"></script>
+  
 </body>
 
 </html>
