--- a/about-us.html
+++ b/about-us.html
@@ -14,7 +14,7 @@
             <div class="contact"><a href="contact.html">Contact</a></div>
             <div class="about"><a href="about-us.html">About us</a></div>
             <div class="music"><a href="music.html">Music</a></div>
-            <div class="anime"><a href="anime.html">Anime</a></div>
+            <div class="anime"><a href="/Anime/anime.html">Anime</a></div>
             
             
         </div>
