--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="nav"><a href="contact.html">Contact</a></div>
             <div class="nav"><a href="about-us.html">About us</a></div>
             <div class="nav"><a href="music.html">Music</a></div>
-            <div class="nav"><a href="anime.html">Anime</a></div>
+            <div class="nav"><a href="/Anime/anime.html">Anime</a></div>
         </div>
         <div class="main">
             <div class="dao">
