--- a/Anime/animeOP.html
+++ b/Anime/animeOP.html
@@ -1,28 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="css/style.css">
+    <title>Greatest Anime series</title>
+    <link rel="stylesheet" href="/css/anime.css">
 </head>
+
 <body>
     <div class="container">
-        <div class="header">
+        <header>
             <div class="logo">Logo</div>
             <div class="home"><a href="index.html">Home</a></div>
             <div class="contact"><a href="contact.html">Contact</a></div>
             <div class="about"><a href="about-us.html">About us</a></div>
             <div class="music"><a href="music.html">Music</a></div>
             <div class="anime"><a href="/Anime/anime.html">Anime</a></div>
-            
-        </div>
-        <div class="main">
-        </div>
-        <div class="footer">this is footer</div>
-        </div>
+        </header>
+        <main>
+            <div class="animeOPContainer"> </div>
     </div>
-
-    <script src="js/main.js"></script>
+    </main>
+    <footer>this is footer</footer>
+    </div>
+    <script src="/js/anime-op.js"></script>
+  
 </body>
+
 </html>
