Text toegevoegd Home page

--- a/Anime/animeMain.html
+++ b/Anime/animeMain.html
@@ -19,13 +19,17 @@
             <div class="anime"><a href="/Anime/anime.html">Anime</a></div>
         </header>
         <main>
-            <div class="animeContainer"> </div>
+            <div class="Animecards">
+            <div class="cardDB"></div>
+            <div class="cardOnepiece"></div>
+            <div class="cardNaruto"></div>    
+            </div>
     </div>
     </main>
     <footer>this is footer</footer>
     </div>
     <script src="/js/anime-db.js"></script>
-  
+
 </body>
 
 </html>
