--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="nav"><a href="contact.html">Contact</a></div>
             <div class="nav"><a href="about-us.html">About us</a></div>
             <div class="nav"><a href="music.html">Music</a></div>
-            <div class="nav"><a href="/Anime/anime.html">Anime</a></div>
+            <div class="nav"><a href="/Anime/animeMain.html">Anime</a></div>
         </div>
         <div class="main">
             <div class="dao">
@@ -25,7 +25,7 @@
 
             </div>
             <div class="mo">
-                <p> Find out about the Most popular Anime's of all time. </p>
+                <div class="textMo"> Find out about the Most popular Anime's of all time. </div>
                 <button class="mo-button"><a href="anime.html">explore</a></button>
             </div>
         </div>
