--- a/Anime/animeDB.html
+++ b/Anime/animeDB.html
@@ -19,7 +19,7 @@
             <div class="anime"><a href="/Anime/anime.html">Anime</a></div>
         </header>
         <main>
-            <div class="animeDBContainer"> </div>
+            <div class="dragonballContainer"> </div>
     </div>
     </main>
     <footer>this is footer</footer>
