--- a/Anime/animeNaruto.html
+++ b/Anime/animeNaruto.html
@@ -19,7 +19,7 @@
             <div class="anime"><a href="/Anime/anime.html">Anime</a></div>
         </header>
         <main>
-            <div class="animeNarutoContainer"> </div>
+            <div class="narutoContainer"> </div>
     </div>
     </main>
     <footer>this is footer</footer>
