--- a/Anime/animeMain.html
+++ b/Anime/animeMain.html
@@ -20,7 +20,20 @@
         </header>
         <main>
             <div class="Animecards">
-            <div class="cardDB"></div>
+            <div class="cardDB">
+                <h2>Dragon Ball</h2>
+                <p>"id": 1,
+                    "name": "Naruto",
+                    "description": "ONE PIECE is a legendary high-seas quest unlike any other. Luffy is a young adventurer who has longed for a life of freedom ever since he can remember. He sets off from his small village on a perilous journey to find the legendary fabled treasure, ONE PIECE, to become King of the Pirates!",
+                    "animators": "Toei",
+                    "creator": "akira toriama",
+                    "date": "1999",
+                    "character": "Monkey D Luffy",
+                    "category": "action, adventure, fantasy.",
+                    "episodes": 1094,
+                    "movie_numbers": 15,
+                    "imageURL": "https://wallpapercave.com/w/wp10688691"</p>
+            </div>
             <div class="cardOnepiece"></div>
             <div class="cardNaruto"></div>    
             </div>
@@ -28,7 +41,7 @@
     </main>
     <footer>this is footer</footer>
     </div>
-    <script src="/js/anime-db.js"></script>
+    <script src="/js/anime-Main.js"></script>
 
 </body>
 
