--- a/Anime/animeMain.html
+++ b/Anime/animeMain.html
@@ -21,21 +21,16 @@
         <main>
             <div class="Animecards">
             <div class="cardDB">
-                <h2>Dragon Ball</h2>
-                <p>"id": 1,
-                    "name": "Naruto",
-                    "description": "ONE PIECE is a legendary high-seas quest unlike any other. Luffy is a young adventurer who has longed for a life of freedom ever since he can remember. He sets off from his small village on a perilous journey to find the legendary fabled treasure, ONE PIECE, to become King of the Pirates!",
-                    "animators": "Toei",
-                    "creator": "akira toriama",
-                    "date": "1999",
-                    "character": "Monkey D Luffy",
-                    "category": "action, adventure, fantasy.",
-                    "episodes": 1094,
-                    "movie_numbers": 15,
-                    "imageURL": "https://wallpapercave.com/w/wp10688691"</p>
+                <h1>Dragon Ball</h1>
+                <p></p>
             </div>
-            <div class="cardOnepiece"></div>
-            <div class="cardNaruto"></div>    
+            <div class="cardOnepiece">
+                <h1>One Piece</h1>
+                <p>ONE PIECE is a legendary high-seas quest unlike any other. Luffy is a young adventurer who has longed for a life of freedom ever since he can remember. He sets off from his small village on a perilous journey to find the legendary fabled treasure, ONE PIECE, to become King of the Pirates</p>
+            </div>
+            <div class="cardNaruto">
+                <h1>Naruto</h1>
+            </div>    
             </div>
     </div>
     </main>
